docs: :memo: add examples to exported object fields
enrich our swagger documentation with examples in objects
